css fix for alignment issues- carrers feature

--- a/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_cross-promo.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/core-components/teaser/_cross-promo.scss
@@ -35,17 +35,18 @@
       @include respond-to-min($desktop) {
         width: 50% !important;
         padding-right: toRem(80);
+        padding-top: toRem(64) !important;
         padding-bottom: toRem(0) !important;
       }
     }
 
     .cmp-teaser__action-container {
       @include respond-to-max($phone) {
-        margin-left: toRem(64);
+        margin-left: toRem(176) !important;
       }
 
       @include respond-to-max($tablet) {
-        margin-left: toRem(144);
+        margin-left: toRem(240);
       }
     }
   }
